--- a/book/404.html
+++ b/book/404.html
@@ -4,7 +4,7 @@
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
         <title></title>
-                        <base href="/example-book/">
+                        <base href="/">
         
 
         <!-- Custom HTML head -->
